--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -54,3 +54,5 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Game:
+    model: github.com/gislihr/gammon/pkg/gammon/model.Game
